fix: code improvements according to sonarqube